...
            </objects>
            <point key="canvasLocation" x="2370" y="-349"/>
        </scene>
        <!--Side Orders-->
        <scene sceneID="Y11-3k-Yim">
            <objects>
                <tableViewController title="Side Orders" id="0DN-Uj-zUK" customClass="SidesTableViewController" customModule="QSRMenu" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="dSR-pQ-gKs">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MenuItemCell" textLabel="WAb-vq-zkE" detailTextLabel="hfJ-ba-88K" rowHeight="66" style="IBUITableViewCellStyleSubtitle" id="iNi-x5-h6b">
...
                        <connections>
                            <outlet property="dataSource" destination="0DN-Uj-zUK" id="Tw6-62-J7T"/>
                            <outlet property="delegate" destination="0DN-Uj-zUK" id="Rp0-bN-S0G"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Side Orders" id="oFa-Mx-VSi">
                        <barButtonItem key="backBarButtonItem" title="Sides" id="2PC-0O-htG"/>
                    </navigationItem>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="fAi-wc-sUw" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1718" y="382"/>
        </scene>
...
